# debug-server

./: .gitignore  AGENTS.md  README.md  environment.yml  pyproject.toml
.codex/: environment.md  spec.md
.codex/done/: 2024-07-30-bootstrap-log.md  2024-08-01-cli-cloud-vm-launcher-task.md  2024-08-02-cli-cloud-launcher-updates.md  bootstrap-conda-ssl-verify.md  bootstrap-conda-ssl.md  bootstrap-environment-and-repo-sync.md  cli-client-surface.md  cli-cloud-session-state.md  cli-cloud-vm-launcher.md  document-docker-restart-policy.md  fix-tests-ruff-black.md  install-debug-server-agent-command.md  mcp-server-surface.md  mypy-import-checks.md  separate-client-server-packages.md  server-api-debug-streams.md  server-api-lifecycle-and-auth.md  server-backend-sqlite-metadata-store.md  server-backend-worktree-and-session-cache.md  server-runner-debugger-integration.md  server-runner-worker-engine.md  spec-conda-and-auth.md  spec-open-question-resolutions.md  spec-open-questions-closed.md  spec-overview.md  task-breakdown-2024-07-30.md  unified-client-server-packaging.md  update-miniconda-sha256.md
.codex/tasks/: bootstrap-environment-and-repo-sync.md  cli-client-surface.md  cli-cloud-session-state.md  cli-cloud-vm-launcher.md  mcp-server-surface.md  observability-pipeline.md  server-api-debug-streams.md  server-api-lifecycle-and-auth.md  server-backend-sqlite-metadata-store.md  server-backend-worktree-and-session-cache.md  server-runner-debugger-integration.md  server-runner-worker-engine.md
client/: __init__.py  config.py  pyproject.toml
client/cli/: __init__.py  cloud.py  cloud_state.py  main.py  templates.py
client/mcp/: __init__.py  server.py
client/sdk/: __init__.py  client.py  models.py
config/: bootstrap.toml  runner.toml
debug_server/: __init__.py  version.py
debug_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
debug_server/api/: __init__.py  auth.py  context.py  main.py  middleware.py  schemas.py  streams.py
debug_server/api/routers/: auth.py  commands.py  debug.py  logs.py  repository.py  sessions.py
debug_server/db/: __init__.py  admin.py  alembic.ini  migrate.py  models.py  service.py  session.py  testing.py
debug_server/db/migrations/: env.py  script.py.mako
debug_server/db/migrations/versions/: 20240730_0001_initial.py
debug_server/mcp/: __init__.py  server.py
debug_server/runner/: __init__.py  environment.py  log_stream.py  supervisor.py
debug_server/runner/debuggers/: __init__.py  debugpy_adapter.py  gdb_adapter.py  lldb_adapter.py  tunnel.py
debug_server/worktrees/: __init__.py  dependency_sync.py  inspect.py  pool.py
docs/: api.md  architecture.md  cli.md  debugging.md  deployment.md  mcp-config.example.toml  mcp-manifest.example.json  mcp.md  runner.md  worktrees.md
infra/terraform/contabo_docker_node/: main.tf
infra/terraform/hetzner_docker_node/: main.tf
infra/terraform/modules/docker_node/: main.tf
scripts/: __init__.py  bootstrap.py
tests/: conftest.py
tests/api/: conftest.py  test_auth.py  test_debug_ws.py  test_log_streams.py  test_repository.py  test_sessions.py
tests/bootstrap/: test_bootstrap.py
tests/cli/: test_cli.py  test_cloud.py  test_cloud_sessions.py  test_cloud_state.py
tests/db/: conftest.py  test_models.py
tests/infra/: test_terraform_templates.py
tests/integration/: test_db_transactions.py  test_session_cache.py  test_worker_supervisor.py
tests/mcp/: test_server.py
tests/runner/: test_debugger_tunnels.py  test_debugpy_adapter.py  test_environment.py  test_log_stream.py  test_native_adapters.py  test_supervisor.py
tests/worktrees/: conftest.py  test_dependency_sync.py  test_pool.py
