[project]
name = "debug-server"
version = "0.1.0"
description = "Metadata store and tooling for the debug server"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "debug-server"}]
dependencies = [
    "sqlmodel>=0.0.16",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    "typer>=0.12.3",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "black>=24.4.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
strict_optional = true
plugins = []
ignore_missing_imports = true
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "debug-server-client"
version = "0.1.0"
description = "Python SDK and CLI for interacting with the Debug Server"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "OpenAI", email = "support@openai.com"},
]
keywords = ["debug", "cli", "sdk", "fastapi"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Debuggers",
]
dependencies = [
  "click>=8.0",
]

[project.urls]
Homepage = "https://github.com/openai/debug-server"
Source = "https://github.com/openai/debug-server"

[project.scripts]
debug-server = "client.cli.main:main"

[tool.setuptools.packages.find]
include = ["client*", "debug_server*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["client", "tests"]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "RUF",
]

[tool.mypy]
python_version = "3.11"
packages = ["client"]
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
show_error_codes = true
pretty = true
