[project]
name = "debug-server"
version = "0.1.0"
description = "Debug server backend, CLI, and SDK packaged together"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "debug-server" }]
dependencies = [
    # Server requirements
    "sqlmodel>=0.0.16",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    "typer>=0.12.3",
    "rich>=13.7.0",
    # Client CLI + SDK requirements
    "click>=8.0",
]

[project.scripts]
debug-server = "client.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "black>=24.4.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["debug_server*", "client*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
strict_optional = true
plugins = []
ignore_missing_imports = true
