[project]
name = "debug-server"
version = "0.1.0"
description = "Split packaging metadata for debug server backend and client (CLI/SDK)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "debug-server" }]
dependencies = [
    # Server requirements
    "sqlmodel>=0.0.16",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "typer>=0.12.3",
    "rich>=13.7.0",
    # Client CLI + SDK requirements
    "click>=8.0",
]

[project.scripts]
debug-server = "client.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "black>=24.4.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["client*", "debug_server*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"client/config.py" = ["S105"]
"client/sdk/client.py" = ["S310"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
strict_optional = true
plugins = []
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
pretty = true
packages = ["client", "debug_server"]

[[tool.mypy.overrides]]
module = ["debug_server.db.*"]
ignore_errors = true
