[project]
name = "debug-server-client"
version = "0.1.0"
description = "Python SDK and CLI for interacting with the Debug Server"
readme = { text = "Python SDK and CLI for interacting with the Debug Server", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "OpenAI", email = "support@openai.com" },
]
keywords = ["debug", "cli", "sdk", "fastapi"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "click>=8.0",
]

[project.urls]
Homepage = "https://github.com/openai/debug-server"
Source = "https://github.com/openai/debug-server"

[project.scripts]
debug-server = "client.cli.main:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["client*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["client", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "RUF",
]

[tool.mypy]
python_version = "3.11"
packages = ["client"]
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
show_error_codes = true
pretty = true
